--- a/socialmedia/templates/index.html
+++ b/socialmedia/templates/index.html
@@ -27,7 +27,11 @@
 
   <!-- Main CSS File -->
   <link href="{% static 'css/main.css' %}" rel="stylesheet">
-
+  <style>
+    {% block css %}
+      
+    {% endblock %}
+  </style>
   <!-- =======================================================
   * Template Name: Arsha
   * Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
@@ -44,7 +48,7 @@
    <!-- ***** Header Area End ***** -->
 
   <main class="main">
-
+    {% block content %}
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
@@ -158,14 +162,15 @@
       </div>
 
     </section><!-- /About Section -->
-
+    {% include "footer.html" %}
+    {% endblock %}
   </main>
 
   {% block body_content %}
   {% endblock body_content %}
   
   <!-- ***** footer Area Start ***** -->
-  {% include "footer.html" %}
+
   <!-- ***** footer Area End ***** -->
 
 
@@ -187,6 +192,7 @@
 
   <!-- Main JS File -->
   <script src="{% static 'js/main.js' %}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
