--- a/socialmedia/templates/user/navbar.html
+++ b/socialmedia/templates/user/navbar.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                 <li class="nav-item">
-                    <a class="btn btn-warning" href="{% url 'home_page' %}">Back to Home Page</a>
+                    <a class="btn btn-warning" href="{% url 'blog_list' %}">Back to Blog List</a>
                 </li>
             </ul>
         </div>
