--- a/socialmedia/templates/user/profile.html
+++ b/socialmedia/templates/user/profile.html
@@ -13,10 +13,10 @@
   <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
   <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
-  <!-- Fonts -->
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -39,84 +39,84 @@
 
 <body class="index-page">
 
+  <!-- Header Section -->
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
+    <!-- Profile Image -->
     <div class="profile-img">
-      <img src="{% static 'assets/img/my-profile-img.jpg' %}" alt="" class="img-fluid rounded-circle">
+      {% if data.profile_picture %}
+        <img src="{{ data.profile_picture.url }}" class="img-fluid rounded-circle" alt="Profile Picture">
+      {% endif %}
     </div>
 
-    <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">{{data.user.username}}</h1>
+    <!-- Profile Name / Logo -->
+    <a href="{% url 'home_page' %}" class="logo d-flex align-items-center justify-content-center">
+      <h1 class="sitename">{{ data.user.username }}</h1>
     </a>
 
+    <!-- Social Links -->
     <div class="social-links text-center">
-      <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+      <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
       <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
+      <a href="#" class="google-plus"><i class="bi bi-google"></i></a>
       <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
+    <!-- Navigation Menu -->
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="{% url 'home_page' %}" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="{% url 'blog_list' %}" class="active"><i class="bi bi-person navicon"></i>Blog</a></li>
+        <li><a href="{% url 'home_page' %}"><i class="bi bi-house navicon"></i> Home</a></li>
+        <li><a href="{% url 'blog_list' %}"><i class="bi bi-journal-text navicon"></i> Blog</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
+        {% comment %} <li><a href="{% url "logout" %}"><i class="bi bi-person navicon"></i> LogOut</a></li> {% endcomment %}
       </ul>
     </nav>
+  </header><!-- End Header -->
 
-  </header>
-
+  <!-- Main Content -->
   <main class="main">
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
+      {% comment %} <img src="{% static 'assets/img/hero-bg.jpg' %}" alt="" data-aos="fade-in" class="img-fluid"> {% endcomment %}
+      <img src="{{ data.profile_picture.url }}" class="card-img-top blog-image" alt="Profile Picture">
 
-      <img src="{% static 'assets/img/hero-bg.jpg' %}" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>{{ data.user.username }}</h2>
-        <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">{{ data.bio }}</span></p>
       </div>
-
-    </section><!-- /Hero Section -->
+    </section><!-- End Hero Section -->
 
     <!-- About Section -->
     <section id="about" class="about section">
-
-      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>{{ data.profile.bio }}</p>
+        <p>{{ data.bio }}</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="{% static 'assets/img/my-profile-img.jpg' %}" class="img-fluid" alt="">
+            {% comment %} <img src="{% static 'assets/img/my-profile-img.jpg' %}" class="img-fluid" alt="Profile"> {% endcomment %}
+            <img src="{{ data.profile_picture.url }}" class="img-fluid" alt="Profile Picture">
           </div>
           <div class="col-lg-8 content">
-            <h2>UI/UX Designer &amp; Web Developer.</h2>
-            <p class="fst-italic py-3">
-              {{ data.profile.bio }}
-            </p>
+            <h2>Designer &amp; Web Developer</h2>
+            <p class="fst-italic py-3">{{ data.bio }}</p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>{{ data.profile.birthday }}</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>{{ data.birth_date }}</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>{{ data.location }}</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>{{ data.user.email }}</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
@@ -128,31 +128,22 @@
             </p>
           </div>
         </div>
-
       </div>
+    </section><!-- End About Section -->
 
-    </section><!-- /About Section -->
+  </main><!-- End Main Content -->
 
-
-
-  </main>
-
+  <!-- Footer Section -->
   <footer id="footer" class="footer position-relative light-background">
-
     <div class="container">
-      <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
+      <div class="copyright text-center">
+        <p>© <strong class="sitename">iPortfolio</strong> All Rights Reserved</p>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
-
-  </footer>
+  </footer><!-- End Footer -->
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
