--- a/socialmedia/templates/user/profile.html
+++ b/socialmedia/templates/user/profile.html
@@ -55,6 +55,20 @@
       <h1 class="sitename">{{ data.user.username }}</h1>
     </a>
 
+    <!-- Follow Button / Logo -->
+     {% if data.user != request.user %}
+      <form action="{% url 'follow_user' pk=data.user.id %}" method="post" style="display: inline;">
+        {% csrf_token %}
+        <button class="btn btn-outline-primary btn-sm">
+            {% if request.user in user.followers.all %}
+                Unfollow
+            {% else %}
+                Follow
+            {% endif %}
+        </button>
+      </form>
+    {% endif %}
+
     <!-- Social Links -->
     <div class="social-links text-center">
       <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
