--- a/socialmedia/templates/registration/profilepage.html
+++ b/socialmedia/templates/registration/profilepage.html
@@ -76,6 +76,8 @@
         <li><a href="{% url "update_profile" %}"><i class="bi bi-person navicon"></i> Update Profile</a></li>
         <li><a href="{% url "create_post" %}"><i class="bi bi-journal-text navicon"></i> Create Post</a></li>
         <li><a href="{% url 'logout' %}"><i class="bi bi-person navicon"></i> LogOut</a></li>
+        <li><a href="{% url "change_password" %}"><i class="bi bi-journal-text navicon"></i> Change Password</a></li>
+
       </ul>
     </nav>
   </header><!-- End Header -->
