Added Templates Files

--- a/socialmedia/templates/registration/change_password.html
+++ b/socialmedia/templates/registration/change_password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Confirm Logout</title>
+    <title>Change Password</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -49,8 +49,12 @@
         .btn-primary {
             background-color: #007bff; /* Custom blue color */
             color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            display: inline-block;
+            border-radius: 5px;
         }
-        button:hover {
+        button:hover, .btn-primary:hover {
             opacity: 0.8;
         }
         a {
@@ -65,10 +69,8 @@
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="btn btn-success">Change Password</button>
-            <a href="{% url 'profilePage' %}">
-                <button type="button" class="btn btn-primary">Back to Profile</button>
-            </a>
         </form>
+        <a href="{% url 'profilePage' %}" class="btn-primary">Back to Profile</a>
     </div>
 </body>
 </html>
