Create Templates File

--- a/socialmedia/templates/registration/profilepage.html
+++ b/socialmedia/templates/registration/profilepage.html
@@ -77,6 +77,8 @@
         <li><a href="{% url "create_post" %}"><i class="bi bi-journal-text navicon"></i> Create Post</a></li>
         <li><a href="{% url 'logout' %}"><i class="bi bi-person navicon"></i> LogOut</a></li>
         <li><a href="{% url "change_password" %}"><i class="bi bi-journal-text navicon"></i> Change Password</a></li>
+        <li><a href="{% url "user_list" %}"><i class="bi bi-person navicon"></i> Request</a></li>
+        <li><a href="{% url "follow_requests" %}"><i class="bi bi-person navicon"></i> Follow Requests</a></li>
 
       </ul>
     </nav>
