Create Templates File

--- a/socialmedia/templates/registration/login.html
+++ b/socialmedia/templates/registration/login.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% comment %} {% load socialaccount %} {% endcomment %}
 {% load widget_tweaks %}
 
 <!DOCTYPE html>
@@ -38,6 +39,9 @@
                 </div>
                 <a href="{% url 'password_reset' %}">Forgot your password?</a>
                 <button type="submit">Log In</button><br>
+                {% comment %} <a href="{% provider_login_url 'google' %}" class="btn btn-danger">
+        Log In with Google
+    </a> {% endcomment %}
                 <button type="button" onclick="window.location.href='/'">Home</button>
             </form>
         </div>
