--- a/socialmedia/templates/index.html
+++ b/socialmedia/templates/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load socialaccount %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,12 +16,12 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet" />
 
     <!-- Vendor CSS Files -->
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" />
     <link href="{% static 'vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet" />
-    <link href="{% static 'vendor/aos/aos.css" rel="stylesheet' %}" />
+    <link href="{% static 'vendor/aos/aos.css' %}" rel="stylesheet" />
     <link href="{% static 'vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet" />
     <link href="{% static 'vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet" />
 
@@ -29,39 +30,28 @@
     <style>
     {% block css %}
     {% endblock css %}
-
     </style>
-    <!--  =======================================================
-  * Template Name: Arsha
-  * Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ========================================================  -->
   </head>
 
   <body class="index-page">
-    <!-- ***** Header Area Start ***** -->
     {% include 'header.html' %}
-    <!-- ***** Header Area End ***** -->
-
 
     <main class="main">
       {% block content %}
-        <!-- Hero Section -->
         <section id="hero" class="hero section dark-background">
           <div class="container">
             <div class="row gy-4">
               <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center" data-aos="zoom-out">
                 <h1>Better Solutions For Your Business</h1>
-                <p>We are team of talented designers making websites with Bootstrap</p>
+                <p>We are a team of talented designers making websites with Bootstrap</p>
                 <div class="d-flex">
                   {% if user.is_authenticated %}
-                    <a class="btn-getstarted" href="{% url 'logout' %}">Logout</a><br><br>
+                    <a class="btn-getstarted" href="{% url 'logout' %}">Logout</a>
                     <a class="btn-getstarted" href="{% url 'profilePage' %}">Profile</a>
                   {% else %}
                     <a class="btn-getstarted" href="{% url 'signup' %}">Sign Up</a>
                     <a class="btn-getstarted" href="{% url 'login' %}">Login</a>
+                    {% comment %} <a class="btn-getstarted" href="{% provider_login_url 'google' %}">Sign Up/Login with Google</a> {% endcomment %}
                   {% endif %}
                 </div>
               </div>
@@ -71,132 +61,16 @@
             </div>
           </div>
         </section>
-        <!-- /Hero Section -->
 
-        <!-- Clients Section -->
-        <section id="clients" class="clients section light-background">
-          <div class="container" data-aos="zoom-in">
-            <div class="swiper init-swiper">
-              <script type="application/json" class="swiper-config">
-            {
-              "loop": true,
-              "speed": 600,
-              "autoplay": {
-                "delay": 5000
-              },
-              "slidesPerView": "auto",
-              "pagination": {
-                "el": ".swiper-pagination",
-                "type": "bullets",
-                "clickable": true
-              },
-              "breakpoints": {
-                "320": {
-                  "slidesPerView": 2,
-                  "spaceBetween": 40
-                },
-                "480": {
-                  "slidesPerView": 3,
-                  "spaceBetween": 60
-                },
-                "640": {
-                  "slidesPerView": 4,
-                  "spaceBetween": 80
-                },
-                "992": {
-                  "slidesPerView": 5,
-                  "spaceBetween": 120
-                },
-                "1200": {
-                  "slidesPerView": 6,
-                  "spaceBetween": 120
-                }
-              }
-            }
-          </script>
-              <div class="swiper-wrapper align-items-center">
-                <div class="swiper-slide">
-                  <img src="{% static 'img/clients/client-1.png' %}" class="img-fluid" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="{% static 'img/clients/client-2.png' %}" class="img-fluid" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="{% static 'img/clients/client-3.png' %}" class="img-fluid" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="{% static 'img/clients/client-4.png' %}" class="img-fluid" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="{% static 'img/clients/client-5.png' %}" class="img-fluid" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="{% static 'img/clients/client-6.png' %}" class="img-fluid" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="{% static 'img/clients/client-7.png' %}" class="img-fluid" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="{% static 'img/clients/client-8.png' %}" class="img-fluid" alt="" />
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-        <!-- /Clients Section -->
+        <!-- Other sections like Clients, About, etc. -->
 
-        <!-- About Section -->
-        <section id="about" class="about section">
-          <!-- Section Title -->
-          <div class="container section-title" data-aos="fade-up">
-            <h2>About Us</h2>
-          </div>
-          <!-- End Section Title -->
-
-          <div class="container">
-            <div class="row gy-4">
-              <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <ul>
-                  <li>
-                    <i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
-                  </li>
-                  <li>
-                    <i class="bi bi-check2-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span>
-                  </li>
-                  <li>
-                    <i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo</span>
-                  </li>
-                </ul>
-              </div>
-
-              <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-                <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
-              </div>
-            </div>
-          </div>
-        </section>
-        <!-- /About Section -->
-        {% include 'footer.html' %}
+      {% include 'footer.html' %}
       {% endblock %}
     </main>
 
-    {% block body_content %}
-
-    {% endblock %}
-
-    <!-- ***** footer Area Start ***** -->
-
-    <!-- ***** footer Area End ***** -->
-
-    <!-- Scroll Top -->
     <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-    <!-- Preloader -->
     <div id="preloader"></div>
 
-    <!-- Vendor JS Files -->
     <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'vendor/php-email-form/validate.js' %}"></script>
     <script src="{% static 'vendor/aos/aos.js' %}"></script>
@@ -205,8 +79,6 @@
     <script src="{% static 'vendor/waypoints/noframework.waypoints.js' %}"></script>
     <script src="{% static 'vendor/imagesloaded/imagesloaded.pkgd.min.js' %}"></script>
     <script src="{% static 'vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
-
-    <!-- Main JS File -->
     <script src="{% static 'js/main.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
