--- a/socialmedia/templates/registration/signup.html
+++ b/socialmedia/templates/registration/signup.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load socialaccount %}
 {% load widget_tweaks %}
 
 <!DOCTYPE html>
@@ -50,7 +51,13 @@
                     {{ form.password2.errors }}
                 </div>
                 <button type="submit">Sign Up</button><br>
+                <p class="text-center mt-4">
+                    Or Sign Up with Google <a href="{% provider_login_url 'google' %}?next=/">Sign Up</a>
+                </p>
                 <button type="button" onclick="window.location.href='/'">Home</button>
+                {% comment %} <a href="{% provider_login_url 'google' %}" class="btn btn-danger">
+        Sign Up with Google
+    </a> {% endcomment %}
             </form>
         </div>
 
