--- a/socialmedia/templates/registration/profilepage.html
+++ b/socialmedia/templates/registration/profilepage.html
@@ -52,7 +52,7 @@
       <!-- Profile Name / Logo -->
       <a href="{% url 'home_page' %}" class="logo d-flex align-items-center justify-content-center">
         {% comment %} <h1 class="sitename">{{ data.user.first_name }} {{ data.user.last_name }}</h1> {% endcomment %}
-        <h1>{{ data.user.username }}</h1>
+        <h1>{{ request.user.first_name }}</h1>
       </a>
 
       <!-- Social Links -->
@@ -111,7 +111,7 @@
 
         <div class="container" data-aos="fade-up" data-aos-delay="100">
           {% comment %} <h2>{{ data.user.first_name }} {{ data.user.last_name }}</h2> {% endcomment %}
-          <h2>{{ data.user.username }}</h2>
+          <h2>{{ request.user.first_name }}</h2>
 
           <p>
             I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">{{ data.bio }}</span>
