--- a/socialmedia/templates/registration/signup.html
+++ b/socialmedia/templates/registration/signup.html
@@ -31,9 +31,9 @@
                 {{ form.non_field_errors }}
                 
                 <div class="form-group">
-                    {{ form.username.label_tag }}<br>
-                    {{ form.username|add_class:"form-control" }}
-                    {{ form.username.errors }}
+                    {{ form.first_name.label_tag }}<br>
+                    {{ form.first_name|add_class:"form-control" }}
+                    {{ form.first_name.errors }}
                 </div>
                 <div class="form-group">
                     {{ form.email.label_tag }}<br>
