--- a/socialmedia/templates/user/profile.html
+++ b/socialmedia/templates/user/profile.html
@@ -52,7 +52,7 @@
 
     <!-- Profile Name / Logo -->
     <a href="{% url 'home_page' %}" class="logo d-flex align-items-center justify-content-center">
-      <h1 class="sitename">{{ data.user.username }}</h1>
+      <h1 class="sitename">{{ data.user.first_name }}</h1>
     </a>
 
     {% comment %} <!-- Follow Button / Logo -->
@@ -98,7 +98,7 @@
 
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>{{ data.user.username }}</h2>
+        <h2>{{ data.user.first_name }}</h2>
         <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">{{ data.bio }}</span></p>
       </div>
     </section><!-- End Hero Section -->
