--- a/socialmedia/templates/user/user_list.html
+++ b/socialmedia/templates/user/user_list.html
@@ -122,7 +122,7 @@
 
       {% for user in users %}
       <tr>
-        <td>{{ user.username }}</td>
+        <td>{{ user.first_name }}</td>
         <td>{{ user.email }}</td>
         <td>
 
